# Token-Genome

./: README.md  pyproject.toml
examples/: admin_drain_token.sol  anti_whale_token.sol  blacklist_tax.sol  capped_mint_token.sol  cooldown_token.sol  liquidity_locker_fake.sol  manual_price_oracle.sol  pausable_token.sol  proxy_upgrade_token.sol  rebase_token.sol  reflection_token.sol  rug_tax_token.sol  simple_token.sol  unlimited_mint_token.sol  whitelist_token.sol
genomes/: admin_drain_token.sol.html  admin_drain_token.sol.json  anti_whale_token.sol.html  anti_whale_token.sol.json  blacklist_tax.sol.html  blacklist_tax.sol.json  capped_mint_token.sol.html  capped_mint_token.sol.json  cooldown_token.sol.html  cooldown_token.sol.json  liquidity_locker_fake.sol.html  liquidity_locker_fake.sol.json  manual_price_oracle.sol.html  manual_price_oracle.sol.json  pausable_token.sol.html  pausable_token.sol.json  proxy_upgrade_token.sol.html  proxy_upgrade_token.sol.json  rebase_token.sol.html  rebase_token.sol.json  reflection_token.sol.html  reflection_token.sol.json  rug_tax_token.sol.html  rug_tax_token.sol.json  simple_token.sol.html  simple_token.sol.json  unlimited_mint_token.sol.html  unlimited_mint_token.sol.json  whitelist_token.sol.html  whitelist_token.sol.json
tgp/: cli.py  extractor.py  genes.py  loader.py  models.py  report.py  risk.py
